--- a/多彩广清家/detail/challenge/challenge.wxml
+++ b/多彩广清家/detail/challenge/challenge.wxml
@@ -1,16 +1,16 @@
 <view class='bg'>
   <view class="post-container" >
   <view wx:for="{{challenge}}" wx:key='{{index}}' class='grid-item'>  
- <navigator url='./challenge_detail/challenge_detail?id={{index+1}}' hover-class="navigator-hover">
+ <navigator url='./challenge_detail/challenge_detail?id={{item.id}}&baoming={{item.baoming}}' hover-class="navigator-hover">
       <view class='title-container'>
           <image src='/images/challen.png' class='title-image'></image>
-          <text class="post-title">{{item.challenge_name}}</text>
+          <text class="post-title">{{item.name}}{{item.baoming}}</text>
       </view>
       <view class='content-container'>
-            <text class="post-content">{{item.challenge_desc}}</text>
+            <text class="post-content">{{item.desc}}</text>
       </view>      
       <view class='deadline-container'>      
-            <text class='deadline'>截至日期： {{item.challenge_date}}</text>
+            <text class='deadline'>截至日期： {{item.tov}}</text>
       </view> 
        </navigator>
     </view> 
