--- a/多彩广清家/detail/card/card.wxss
+++ b/多彩广清家/detail/card/card.wxss
@@ -3,7 +3,7 @@
 }
 
 .post-container{
-  background-color: #EEEEEE;  
+background-color: #EEEEEE;  
 flex-direction:column;
 display:flex;
 margin-top:10px;
@@ -17,27 +17,28 @@ padding-bottom: 5px;
   background-color: #fff;  
   flex-direction:column;
   display:flex;
-  height: 260px;
   border-bottom: 1px solid #ededed;
   border-top: 1px solid #ededed;
   margin-top: 5px;
 }
 
 .title-container{
-  height:40px;
+  margin-top: 10px;
+  height:45px;
   width: 100%
 }
 
 .image-container{
-  height:140px;
+  height:200px;
   width: 100%;
 }
 
-.content-container{
-  height:55px;
+.content-container
+{
   width: 100%;
   overflow: hidden;
   text-overflow:ellipsis;
+  
 }
 
 .deadline-container{
@@ -50,7 +51,7 @@ padding-bottom: 5px;
 .deadline{
   float: right;
   margin-right: 10px;
-  margin-top: 1px;
+  margin-top: 5px;
   font-size: 10px;
   color: #AAAAAA  ;
 }
@@ -85,18 +86,22 @@ margin-bottom: 10px;
 font-size:25px;
 font-weight: 600;
 color:#333;
-margin-top: 5px;
+margin-top: 20px;
 margin-left: 10px;
 }
 .post-content{
-color:#666;
-font-size:28rpx;
-margin-bottom:20rpx;
-margin-left: 20rpx;
-letter-spacing:2rpx;
-line-height: 40rpx;
-overflow: hidden;
-text-overflow:ellipsis;
+  margin-top: 10px;
+  overflow:hidden; 
+  display:-webkit-box; 
+  -webkit-box-orient:vertical;
+  -webkit-line-clamp:4; 
+  color:#666;
+  font-size:30rpx;
+  margin-bottom:20rpx;
+  margin-left: 20rpx;
+  margin-right: 20rpx;
+  letter-spacing:2rpx;
+  line-height: 30rpx;
 }
 .post-like{
 font-size:13px;
