--- a/多彩广清家/pages/index/index.wxss
+++ b/多彩广清家/pages/index/index.wxss
@@ -13,6 +13,12 @@
   display: flex;  
   flex-direction: row;  
 }
+
+.picker{
+  padding: 26rpx;
+  background-color: #EEEEEE;
+}
+
 .hang{
     display: flex;
     align-content: center;
