--- a/多彩广清家/detail/card/card.wxml
+++ b/多彩广清家/detail/card/card.wxml
@@ -1,4 +1,22 @@
 <view class='bg'>
+
+    <navigator url='../../detail/card/card/gaoguan/gaoguan?id=888888' hover-class="navigator-hover">
+  <view  class='grid-item'  >  
+      <view class='title-container'>
+            <text class="post-title">高管-周末专区</text>
+      </view>
+       <view class='image-container'>
+            <image class="post-image" src="https://m.hola-chino.cn/Martin/tp5/public/upload/daka/gaoguan.jpg"></image>
+      </view> 
+      <view class='content-container'>
+            <text class="post-content">高管-周末专区</text>
+      </view>      
+      <view class='deadline-container'>      
+            <text class='deadline'>截至日期: - </text>
+      </view> 
+    </view> 
+    </navigator>
+
   <view class="post-container" wx:for="{{activity}}" wx:key='{{index}}'>
      <navigator url='../../detail/card/card/card_detail/card_detail?id={{index+1}}' hover-class="navigator-hover">
   <view  class='grid-item'  >  
@@ -17,4 +35,5 @@
     </view> 
     </navigator>
   </view>
+  
 </view>
