--- a/多彩广清家/detail/card/card/card_detail/card_detail.wxml
+++ b/多彩广清家/detail/card/card/card_detail/card_detail.wxml
@@ -29,60 +29,68 @@
   <view class='border-container'><view class='border2'></view></view>
 
 
-  <view class='comment-container'>
 
-  <view class='comment-title'>
-    <view class='comment-title-font'>
-      <text>打卡日记</text>
+
+  <view >
+
+    <view class='comment-title'>
+      <view class='comment-title-font'>
+        <text>打卡日记</text>
+      </view>
+    </view>
+
+      <view class='comment-item' wx:for="{{data}}" wx:key="index">
+
+        <view class='comment-item-title'>
+          <view class='avatar-container'>
+            <image class="avatar" src="{{data[index]['comment_touxiang']}}"></image>
+          </view>
+        </view>
+
+        <view class='comment-item-content'>
+
+          <view class='comment-item-content-title'>
+            <view class='comment-item-content-name'>
+              <text class='comment-item-content-name-font'>{{data[index]['comment_name']}}</text>
+            </view>
+            <view class='comment-item-content-date'>
+                <text class='comment-item-content-name-time'>{{data[index]['comment_time']}}</text>
+            </view>
+          </view>
+
+          <view class='comment-item-content-content'>
+            <text class='comment-item-content-content-font'>{{data[index]['comment_content']}}</text>
+          </view>
+
+          <view class='comment-item-content-pic' style='width:200rpx;height:200rpx;margin-top:10px;margin-bottom:10px;'>
+            <image  style='width:200rpx;height:200rpx;' src="https://m.hola-chino.cn/Martin/tp5/public/upload/{{data[index]['comment_pic']}}"></image>
+          </view>
+
+          <view class='comment-item-content-pinglun-button'>
+            <image class="pinglun-icon" src='../../../../images/pinglun.png' data-comment_id="{{data[index]['comment_id']}}" catchtap='pinglun'></image>
+          </view>
+
+          <view class='item-container'>
+            <view class='comment-item-content-pinglun' >
+              <view class='pinglun-item' wx:if="{{pinglun[pindex]['pinglun_comment_id'] == data[index]['comment_id']}}"  wx:for="{{pinglun}}" wx:for-index='pindex'>
+                <text class='pinglun-name'>{{pinglun[pindex]['pinglun_name']}} : </text>
+                <text class='pinglun-content'>{{pinglun[pindex]['pinglun_content']}}</text>
+              </view>
+            </view>
+          </view>
+
+        </view>
     </view>
   </view>
 
-    <view class='comment-item' wx:for="{{data}}" wx:key="index">
 
-      <view class='comment-item-title'>
-        <view class='avatar-container'>
-          <image class="avatar" src="{{data[index]['comment_touxiang']}}"></image>
-        </view>
-      </view>
 
-      <view class='comment-item-content'>
-        <view class='comment-item-content-title'>
-          <view class='comment-item-content-name'>
-            <text class='comment-item-content-name-font'>{{data[index]['comment_name']}}</text>
-          </view>
-          <view class='comment-item-content-date'>
-              <text class='comment-item-content-name-time'>{{data[index]['comment_time']}}</text>
-          </view>
-        </view>
-        <view class='comment-item-content-content'>
-          <text class='comment-item-content-content-font'>{{data[index]['comment_content']}}</text>
-        </view>
-        <view class='comment-item-content-pic' style='width:200rpx;height:200rpx;margin-top:10px;margin-bottom:10px;'>
-          <image  style='width:200rpx;height:200rpx;' src="https://m.hola-chino.cn/Martin/tp5/public/upload/{{data[index]['comment_pic']}}"></image>
-        </view>
-        <view class='comment-item-content-pinglun-button'>
-          <image class="pinglun-icon" src='../../../../images/pinglun.png' data-comment_id="{{data[index]['comment_id']}}" catchtap='pinglun'></image>
-        </view>
-        <view class='item-container'>
-          <view class='comment-item-content-pinglun' >
-          <view class='pinglun-item' wx:if="{{pinglun[pindex]['pinglun_comment_id'] == data[index]['comment_id']}}"  wx:for="{{pinglun}}" wx:for-index='pindex'>
-              <text class='pinglun-name'>{{pinglun[pindex]['pinglun_name']}} : </text>
-              <text class='pinglun-content'>{{pinglun[pindex]['pinglun_content']}}</text>
-          </view>
-        </view>
-        </view>
 
-      </view>
 
-    </view>
-  </view>
-
- <modal hidden="{{hiddenmodalput}}" showCancel="false" title="评论" confirm-text="提交" cancel-text="取消" bindcancel="cancel" bindconfirm="confirm" >  
+  <modal hidden="{{hiddenmodalput}}" showCancel="false" title="评论" confirm-text="提交" cancel-text="取消" bindcancel="cancel" bindconfirm="confirm" >  
     <view class="section">
-    <input type='text'placeholder="请输入内容" auto-focus bindinput='input'/> 
+      <input type='text'placeholder="请输入内容" bindinput='input'/> 
     </view>
-</modal> 
-
-
+  </modal> 
 
 </view>
