--- a/多彩广清家/detail/card/card/gaoguan/gaoguan.wxml
+++ b/多彩广清家/detail/card/card/gaoguan/gaoguan.wxml
@@ -53,7 +53,7 @@
 
     </view>
 
-    <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:{{winHeight - 31}}px" bindchange="bindChange">
+    <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:2400px" bindchange="bindChange">
       <swiper-item>
       <view class='comment-item' wx:for="{{data}}" wx:key="index">
 
@@ -75,8 +75,8 @@
             <view class='gaoguancomment-item-content-content'>
               <text class='comment-item-content-content-font'>{{data[index]['comment_content']}}</text>
             </view>
-            <view class='comment-item-content-pic' style='width:200rpx;height:200rpx;margin-top:10px;margin-bottom:10px;'>
-              <image  style='width:200rpx;height:200rpx;' src="https://m.hola-chino.cn/Martin/tp5/public/upload/{{data[index]['comment_pic']}}"></image>
+            <view catchtap='viewpic' class='comment-item-content-pic' style='width:200rpx;height:200rpx;margin-top:10px;margin-bottom:10px;'>
+              <image mode="aspectFill"  data-src="https://m.hola-chino.cn/Martin/tp5/public/upload/{{data[index]['comment_pic']}}" style='width:200rpx;height:200rpx;' src="https://m.hola-chino.cn/Martin/tp5/public/upload/{{data[index]['comment_pic']}}"></image>
             </view>
             <view class='comment-item-content-pinglun-button'>
               <image class="pinglun-icon" src='../../../../images/pinglun.png' data-comment_id="{{data[index]['comment_id']}}" catchtap='pinglun'></image>
@@ -100,8 +100,8 @@
           <view style='border-top:1px solid #006666;width:90%;margin-top:20px;margin-left:20px;'></view>
           <view class='rank-item-container' wx:for="{{gaoguan}}" wx:key='{{index}}'>
             <view class='rank-item'>
-              <view class='rank-pic-container'>
-                <image src='/images/medal{{index}}.png' class='rank-pic'></image>
+              <view class='rank-pic-container' >
+                <image mode="aspectFill" src='/images/medal{{index}}.png' class='rank-pic'></image>
               </view>
               <view class='rank-user-ava-container'>
                 <image class='rank-user-ava' src='{{item.touxiang}}'></image>
@@ -112,7 +112,7 @@
                 </view>
               </view>
               <view class='rank-font'>
-                <text class='rank-font'>{{item['point']}} K</text>
+                <text class='rank-font'>{{item['point']}}</text>
               </view>
             </view>
             <view style='border-top:1px solid #006666;width:90%;margin-left:20px;'></view>
