--- a/多彩广清家/detail/rank/rank.wxss
+++ b/多彩广清家/detail/rank/rank.wxss
@@ -8,7 +8,7 @@
   display: inline-block; 
   width: 25%; 
   height: 60px;
-  color: #777777; 
+  color: #006666; 
 }
 
 .swiper-title-1-container{
@@ -29,8 +29,8 @@
 }
 
 .on{
-  color: #996699; 
-  border-bottom: 5rpx solid #996699;
+  color: #006666; 
+  border-bottom: 5rpx solid #006666;
 }
 .swiper-box{ 
   display: block;
@@ -97,10 +97,20 @@
   float: left;
   font: boild 15px;
   font-family: MicroSoft Yahei;
-  color: #660066;
+  color: #006666;
 }
 
 .rank-user-ava-container{
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  margin-top: 5px;
+  height: 60px;
+  width: 20%;
+
+}
+
+.rank-user-ava-container2{
   flex-direction: column;
   display: flex;
   align-items: center;
@@ -119,12 +129,12 @@
 .rank-int-font{
   font: boild 10px;
   font-family: MicroSoft Yahei;
-  color: #330033 ;
+  color: #006666 ;
 }
 .rank-font{
   font: boild 10px;
   font-family: MicroSoft Yahei;
-  color: #330033 ;
+  color: #006666 ;
   margin-top: 15px;
 }
 
